src/main/webapp/app.css
.wm-app .app-header,
.wm-app .app-mobile-header {
    background-color: rgba(230, 218, 218, 0.65);
}
.app-picture {
    width: 100px;
    height: 60px;
    vertical-align: baseline !important;
}
.wm-app .form-control,
.wm-app .form-group + .form-control {
    height: 38px;
}
.form-group input.form-control {
    margin-bottom: 9px;
}
.form-group textarea.form-control {
    margin-bottom: 9px;
}
[ng\:cloak],
[ng-cloak],
[data-ng-cloak],
[x-ng-cloak],
.ng-cloak,
.x-ng-cloak {
    display: none !important;
}
label.app-radioset-label.disabled > input + .caption:before,
div.app-checkbox label.disabled.unchecked input[type=checkbox] + .caption:before {
    -moz-box-shadow: inset 0 0 0 3px #aaa;
    -webkit-box-shadow: inset 0 0 0 3px #aaa;
    box-shadow: inset 0 0 0 3px #aaa;
    background-color: #aaa;
}
label.app-radioset-label.disabled > input:checked + .caption:before {
    background-color: #555;
}
label.app-radioset-label.disabled > input:checked + .caption:before,
div.app-checkbox label.disabled input[type=checkbox] + .caption:before {
    border: 2px #555 solid;
    color: #555;
}
div.app-checkbox label.disabled,
div.app-checkbox label.disabled input[type=checkbox] + .caption {
    cursor: not-allowed;
}
div.app-checkbox label.disabled input[type=checkbox] + .caption:before {
    -moz-box-shadow: none;
    -webkit-box-shadow: none;
    box-shadow: none;
}
div.app-checkbox label.disabled input[type=checkbox]:not(:checked) + .caption:before {
    border: solid 2px #ccc;
}
div.app-checkbox label.disabled input[type=checkbox]:checked + .caption:before {
    content: "\2714";
    padding: 0 1px;
    text-shadow: none;
}
.wm-app .app-grid .table thead th .header-data {
    text-transform: none !important;
    font-weight: bold;
}
.panel-transparent {
    background: none !important;
    border: none !important;
    box-shadow: none !important;
    -webkit-box-shadow: none !important;
    -moz-box-shadow: none !important;
    -ms-box-shadow: none !important;
    -o-box-shadow: none !important;
}
.wm-app .nav-pills > li.active > a,
.wm-app .nav-pills > li.active > a:hover,
.wm-app .nav-pills > li.active > a:focus {
    color: #ef6262 !important;
}
.wm-app .radio .caption,
.wm-app .checkbox .caption {
    min-height: 1.4em !important;
}
.modal-open #wm-app-content {
    overflow: hidden;
}
@media (min-width: 768px) {
    .modal-larger {
        width: 70% !important;
        height: 80% !important;
        margin: 30px auto !important;
    }
}
.dynamic-field-column:not(.col-sm-12) {
    padding-right: 10em !important;
}
.stuckTop {
    position: fixed !important;
}
.muni-logo {
    max-width: 240px;
    max-height: 240px;
    width: auto !important;
    height: auto !important;
}

